samples/_failures_safe/1761693629_92aa74_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bd80b341.c: In function ‘analyze_logs’:
./samples/SAFE/__tmp_bd80b341.c:133:42: error: expected ‘]’ at end of input
  133 |         stats->end_time[TIMESTAMP_LEN - 1
      |                                          ^
      |                                          ]
./samples/SAFE/__tmp_bd80b341.c:133:9: error: expected declaration or statement at end of input
  133 |         stats->end_time[TIMESTAMP_LEN - 1
      |         ^~~~~
./samples/SAFE/__tmp_bd80b341.c:133:9: error: expected declaration or statement at end of input
